Provide <h1> for discover stage.

--- a/design/default/discover/templates/base.html.j2
+++ b/design/default/discover/templates/base.html.j2
@@ -5,6 +5,7 @@
 {% endblock head %}
     </head>
     <body>
+        <h1>{{ this.variables.title }}</h1>
 {% block body %}
 {% block content %}
 {% endblock content %}
