Provide an ID for <h1>.

--- a/design/default/discover/templates/base.html.j2
+++ b/design/default/discover/templates/base.html.j2
@@ -5,7 +5,7 @@
 {% endblock head %}
     </head>
     <body>
-        <h1>{{ this.variables.title }}</h1>
+        <h1 id="h1_778844813889922_30091958290814">{{ this.variables.title }}</h1>
 {% block body %}
 {% block content %}
 {% endblock content %}
