--- a/design/default/generate/documents/static/styles/_screen_layout_header.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout_header.scss
@@ -253,6 +253,8 @@ body {
                     float: right;
 
                     > menu.nav-toc.nav-toc-0 {
+                        float: right;
+
                         > li.nav-toc.nav-toc-0 {
                             &:hover {
                                 position: relative;
