--- a/design/default/generate/documents/static/styles/_screen_layout_article_aside.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout_article_aside.scss
@@ -1,2 +1,15 @@
 @use 'config';
 
+body {
+    > main {
+        > article {
+            > section {
+                div.section-content {
+                    > p {
+                        padding: config.$main__p_padding;
+                    }
+                }
+            }
+        }
+    }
+}
